fixed overflow bug

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -27,7 +27,6 @@ html {
 body {
 	background: #fff;
 	background-color: #fff;
-	overflow-x: hidden;
 }
 
 img {
